<resources>
    <string name="app_name">Green Travel</string>
    <string name="locate_me_decript">locate me</string>
    <string name="near_by_decript">near by</string>
    <string name="set_schedule_decript">set schedule</string>
    <string name="search_hint">search every where</string>
    <string name="types_search_hint">type here</string>
    <string name="btn_direct">Direct</string>
    <string name="btn_info">Detail</string>
    <string name="title_place_details">Information</string>
    <string name="title_schedule">Schedule</string>
    <string name="location">Where do you want to go?</string>
    <string name="locationDesc"> Input Location Here </string>
    <string name="fromdate">From</string>
    <string name="inputdatefrom">Input Date From</string>
    <string name="todate">To</string>
    <string name="inputdateto">Input Date To</string>
    <string name="fromtime">Time From</string>
    <string name="inputtimefrom">Input Time From</string>
    <string name="totime">To Time</string>
    <string name="inputtimeto">Input Time To</string>
    <string name="locationDescription">Location</string>
    <string name="calendarDescription">Calendar</string>
    <string name="cancleDescription">Cancle</string>
    <string name="checkDescription">Check</string>
    <string name="clockDescription">Time</string>
    <string name="note">Note</string>

    <string-array name="types_support">
        <item>Cafe</item>
        <item>Food</item>
        <item>Bar</item>
        <item>Gym</item>
        <item>Park</item>
        <item>Car Repair</item>
        <item>Post Office</item>
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Police</item>
        <item>Hospital</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
