<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

              >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_orange_light"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:text="&lt;"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_place_details"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_title"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="66dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="0.02"
                android:contentDescription="@string/location"
                android:src="@drawable/location"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/location"></TextView>

                <EditText
                    android:id="@+id/edtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/locationDesc"
                    android:maxLines="1"
                    android:singleLine="true"></EditText>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.28"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="64dp"
                android:layout_height="134dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/fromdate"
                android:src="@drawable/calendar512"
                />

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/txtDateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/fromdate"></TextView>

                <EditText
                    android:id="@+id/edtDateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/inputdatefrom"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true"></EditText>

                <TextView
                    android:id="@+id/txtDateTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/todate"
                    android:maxLines="1"></TextView>

                <EditText
                    android:id="@+id/edtDateTo"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/inputdateto"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true"></EditText>

                <ImageButton
                    android:id="@+id/imgCalendar"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/calendar128"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.08"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="67dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="0.78"
                android:contentDescription="@string/fromtime"
                android:src="@drawable/clockicon1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/txtTimeFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/fromtime"></TextView>

                <EditText
                    android:id="@+id/edtTimeFrom"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/inputtimefrom"
                    android:inputType="time"
                    android:maxLines="1"
                    android:singleLine="true"></EditText>


            </LinearLayout>

            <Switch

                android:id="@+id/swCountDown"
                android:layout_width="99dp"
                android:layout_height="77dp"
                android:layout_gravity="right|center_vertical|center_horizontal"
                android:foregroundGravity="right"
                android:gravity="center_vertical|center_horizontal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/note"
                android:src="@drawable/note512"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/txtNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/note"></TextView>

                <EditText
                    android:id="@+id/edtNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/note"
                    android:maxLines="1"
                    android:singleLine="true"></EditText>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:weightSum="1"
            >

            <ImageButton
                android:id="@+id/imgCancle"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:src="@drawable/cancle"
                />

            <ImageButton
                android:id="@+id/imgCheck"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:foregroundGravity="center"
                android:src="@drawable/check"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>