<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_direct"
        android:layout_marginTop="200dp"
        android:layout_marginRight="-10dp"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/btn_direct"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/btn_direct_bg"
        android:layout_gravity="top|end"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/btn_detail"
        android:layout_marginTop="232dp"
        android:layout_marginRight="-10dp"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/btn_info"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/btn_detail_bg"
        android:layout_gravity="top|end"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_locate_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/fab_lme_margin_bot"
        android:layout_marginRight="@dimen/fab_child_margin_right"
        android:src="@drawable/locate_me"
        app:fabSize="mini"
        app:backgroundTint="@color/locate_me_button"
        android:elevation="6dp"
        app:pressedTranslationZ="@dimen/press_tranlatez"
        android:clickable="true"
        android:visibility="invisible"
        />


    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_nearBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/fab_nearby_margin_bot"
        android:layout_marginRight="@dimen/fab_child_margin_right"
        android:src="@drawable/nearby"
        app:fabSize="mini"
        android:elevation="6dp"
        app:pressedTranslationZ="@dimen/press_tranlatez"
        app:backgroundTint="@color/nearby_button"
        android:visibility="invisible"
        android:clickable="true"

        />

    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_setSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        app:fabSize="mini"
        android:elevation="6dp"
        app:pressedTranslationZ="@dimen/press_tranlatez"
        android:layout_marginBottom="@dimen/fab_schedule_margin_bot"
        android:layout_marginRight="@dimen/fab_child_margin_right"
        android:src="@drawable/schedule"
        android:visibility="invisible"
        app:backgroundTint="@color/schedule_button"
        android:clickable="true"/>

    <TextView
        android:id="@+id/txt_decript_lme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locate_me_decript"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/text_decript_lcate_margin_bot"
        android:layout_marginRight="@dimen/text_fab_child_margin_right"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:textStyle="italic"
        android:textColor="@color/text_decript_fab"
        android:background="@color/bg_text_decript_fab"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/txt_decript_nearb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/near_by_decript"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/text_decript_nearby_margin_bot"
        android:layout_marginRight="@dimen/text_fab_child_margin_right"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:textStyle="italic"
        android:textColor="@color/text_decript_fab"
        android:background="@color/bg_text_decript_fab"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/txt_decript_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_schedule_decript"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/text_decript_schedule_margin_bot"
        android:layout_marginRight="@dimen/text_fab_child_margin_right"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:textStyle="italic"
        android:textColor="@color/text_decript_fab"
        android:background="@color/bg_text_decript_fab"
        android:visibility="invisible"/>


</FrameLayout>
